--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 	<link rel="stylesheet" href="css/animate.css" />
 	<link rel="stylesheet" href="css/ionicons.css" />
 	
-	<!--[if lt IE 9]>
+	
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
 	
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="images/favicons/J_letter.png">
@@ -103,22 +102,22 @@
 				</li>
 				<li class="active">
 					<a href="#started-section" class="waves-effect waves-light">
-						<i class="material-icons">home</i>Home
+						<i class="ion ion-ios-home">home</i>Home
 					</a>
 				</li>
 				<li>
 					<a href="#about-section" class="waves-effect waves-light">
-						<i class="material-icons">person_pin</i>About
+						<i class="ion ion-ios-body">person_pin</i>About
 					</a>
 				</li>
 				<li>
 					<a href="#experience-section" class="waves-effect waves-light">
-						<i class="material-icons">assignment</i>Resume
+						<i class="ion ion-filing">assignment</i>Resume
 					</a>
 				</li>
 				<li>
 					<a href="#works-section" class=" waves-effect waves-light">
-						<i class="material-icons">work</i>Portfolio
+						<i class="ion ion-filing">work</i>Portfolio
 					</a>
 				</li>
 				<!--<li>
@@ -128,7 +127,7 @@
 				</li> -->
 				<li>
 					<a href="#contact-section" class="waves-effect waves-light">
-						<i class="material-icons">phone</i>Contact
+						<i class="ion ion-filing">phone</i>Contact
 					</a>
 				</li>
 			</ul>
