no icons for side nav

--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
 				</li>
 				<li class="active">
 					<a href="#started-section" class="waves-effect waves-light">
-						<i class="ion ion-ios-home">home</i>Home
+						Home
 					</a>
 				</li>
 				<li>
 					<a href="#about-section" class="waves-effect waves-light">
-						<i class="ion ion-ios-body">person_pin</i>About
+						About
 					</a>
 				</li>
 				<li>
 					<a href="#experience-section" class="waves-effect waves-light">
-						<i class="ion ion-filing">assignment</i>Resume
+						Resume
 					</a>
 				</li>
 				<li>
 					<a href="#works-section" class=" waves-effect waves-light">
-						<i class="ion ion-filing">work</i>Portfolio
+						Portfolio
 					</a>
 				</li>
 				<!--<li>
@@ -127,7 +127,7 @@
 				</li> -->
 				<li>
 					<a href="#contact-section" class="waves-effect waves-light">
-						<i class="ion ion-filing">phone</i>Contact
+						Contact
 					</a>
 				</li>
 			</ul>
