--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
 				</li>
 				<li class="active">
 					<a href="#started-section" class="waves-effect waves-light">
-						Home
+						<i class="ion ion-ios-home">home</i>Home
 					</a>
 				</li>
 				<li>
 					<a href="#about-section" class="waves-effect waves-light">
-						About
+						<i class="ion ion-ios-body">person_pin</i>About
 					</a>
 				</li>
 				<li>
 					<a href="#experience-section" class="waves-effect waves-light">
-						Resume
+						<i class="ion ion-filing">assignment</i>Resume
 					</a>
 				</li>
 				<li>
 					<a href="#works-section" class=" waves-effect waves-light">
-						Portfolio
+						<i class="ion ion-filing">work</i>Portfolio
 					</a>
 				</li>
 				<!--<li>
@@ -127,7 +127,7 @@
 				</li> -->
 				<li>
 					<a href="#contact-section" class="waves-effect waves-light">
-						Contact
+						<i class="ion ion-filing">phone</i>Contact
 					</a>
 				</li>
 			</ul>
